[gd_scene load_steps=11 format=2]

[ext_resource path="res://assetsPROJETO/textures/background.png" type="Texture" id=1]
[ext_resource path="res://Jogador_no_mundo.gd" type="Script" id=2]
[ext_resource path="res://ambiente/Chao.tscn" type="PackedScene" id=3]
[ext_resource path="res://ambiente/GeradorObstaculo.tscn" type="PackedScene" id=4]
[ext_resource path="res://Mundo.gd" type="Script" id=5]
[ext_resource path="res://ui/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/MenuLayer.tscn" type="PackedScene" id=7]
[ext_resource path="res://assetsPROJETO/textures/iconeLoja.atlastex" type="Texture" id=8]
[ext_resource path="res://gerador_baloes.tscn" type="PackedScene" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 18.3848

[node name="Mundo" type="Node2D"]
script = ExtResource( 5 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="MenuLayer" parent="." instance=ExtResource( 7 )]

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="GeradorObstaculo" parent="." instance=ExtResource( 4 )]
position = Vector2( 800, 0 )

[node name="Chao" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 687 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
visible = false
position = Vector2( 116, 432 )
shape = SubResource( 1 )
disabled = true

[node name="Position2D" type="Position2D" parent="RigidBody2D"]
position = Vector2( 116, 432 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 16.0
margin_top = 132.0
margin_right = 48.0
margin_bottom = 165.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 8 )

[node name="GeradorBaloes" parent="." instance=ExtResource( 9 )]

[connection signal="start_game" from="MenuLayer" to="." method="_on_MenuLayer_start_game"]
[connection signal="body_entered" from="Chao/ZonaDeMorte" to="." method="_on_ZonaDeMorte_body_entered"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]

[editable path="Chao"]
